--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,11 +8,12 @@
 
 .jumboText{
   font-family: 'Caveat', cursive;
+  color: rgb(248, 223, 161);
 }
 
 body{
   font-family: 'Roboto', sans-serif;
-  background: rgb(202, 195, 195);
+  background: rgb(248, 223, 161);
 }
 
 footer {
